--- a/Moduuli1/tehtävä2/2.html
+++ b/Moduuli1/tehtävä2/2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tehtävä2</title>
   <script src="2.js" defer></script>
 </head>
 <body>
