--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tehtävä1</title>
-    <script src="1.js" defer></script>
+    <title>Title</title>
 </head>
 <body>
-    <h1>Tehtävä1</h1>
+
 </body>
 </html>
