--- a/Moduuli1/tehtävä3/3.html
+++ b/Moduuli1/tehtävä3/3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tehtävä3</title>
     <script src="3.js" defer></script>
 </head>
 <body>
