--- a/screenshots.html
+++ b/screenshots.html
@@ -15,7 +15,7 @@
     <img src="css/images/validator.png" alt="validator">
 </div>
 <div class="fontti">
-    <img src="css/images/fontti.png" alt="verdana">
+    <img src="css/images/fontti1.png" alt="verdana">
 </div>
 </body>
 </html>
